# renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  start.cmd
dev/: build.cmd  build_bindings.cmd  build_debug.cmd  build_pbrt.cmd  build_release.cmd  clean.cmd  clean_debug.cmd  clean_release.cmd  compile.cmd  compile_pbrt.cmd  compile_ui.cmd
qt/: console_widget.ui  main_window.ui  render_view.ui  scene_view.ui
src/cpp/bindings/: CMakeLists.txt  ParamSetProxy.cpp  ParamSetProxy.h  api.cpp
src/cpp/python_interface/: CMakeLists.txt  test.cpp
src/python/: console.py  coordinates.py  main.py  mesh.py  objreader.py  test.py  transform.py
src/python/core/: coordinates.py  mesh.py  pbrt_export.py  scene.py  shaders.py  shapes.py  transform.py
src/python/ui/: console_widget.py  gl_widget.py  main_window.py  render_view.py  scene_view.py
src/python/ui_generated/: console_widget_ui.py  main_window_ui.py  render_view_ui.py  scene_view_ui.py
